--- a/posts/A1.md
+++ b/posts/A1.md
@@ -8,8 +8,317 @@ allow_math: true
 
 # Ideation Stage
 
-https://freesound.org/people/ondondvo/sounds/460079/
+### My Kindred Spirit: Plushie Bear
 
-https://freesound.org/people/GregorQuendel/sounds/710389/
+For my AT1 project, I have chosen my plushie bear as my kindred spirit. This choice will perfectly embodies both cute and a personal connection to me.
 
-https://freesound.org/people/bvaudio/sounds/395198/
+Here is how I will achieve cuteness in three domains:
+
+1. **Cute Visual**
+
+   A round, fluffy bear face wth big eyes in the middle of the canvas. The colour of the bear face will be soft brown pastel colours.
+
+- Techniques:
+
+  - Draw the Bear Expressions by using Procreate (Neutral, Sleeping, Happy)
+
+  - Colours
+
+    - Bear Face
+
+      Soft pastel browns
+
+    - Background Canvas
+
+    Change according to the bear's emotion
+
+2. **Cute Sounds**
+
+   Clicking on the bear's face will trigger different sound effects corresponding to its expressions.
+
+   For example:
+
+   - Neutral Expression: baby mumbling sound
+   - Happy Expression: baby giggling sound
+   - Sleeping Expression: Lullaby music
+
+- Techniques:
+  - sound library [(Freesounds)](https://freesound.org/)
+  - Make sure the sounds are short and match the expression
+
+3. **Cute Interactions**
+
+   When the mouse clicks on the bear face, it will change to different expressions, sound, and background colour
+
+- Techniques:
+  - mousePressed or mouseClicked to apply the clickling interaction
+  - Canvas background colour change when along with the expression after clicking
+
+# Sketch
+
+<iframe id="A1: Ideation Sketch" src="https://editor.p5js.org/WaiKei1/full/ELzwIInyR"></iframe>
+
+<script type="module">
+
+    const iframe  = document.getElementById (`A1: Ideation Sketch`)
+    iframe.width  = iframe.parentNode.scrollWidth
+    iframe.height = iframe.width * 9 / 16 + 42
+
+</script>
+
+**Desciption of my plan:**
+
+The canvas will be sized to fit the screen, with a round bear face displayed in the center. Initially, the bear will have a neutral expression with a pink background. When the user clicks on the bear’s face, the expression will change to a different emotion, accompanied by a corresponding sound effect. The background color will also update to match the emotion. Other than that, the background will include some elements that related to each expressions, for example:
+
+- Screen 1 (Neutral): Pink background
+- Screen 2 (Sleeping): Blue background
+- Screen 3 (Happy): Yellow background
+
+Each click will cycle through these expressions in order, creating an interactive experience.
+
+# Sonic
+
+Before starting my first attempt at Assignment 1, I first gathered the sounds I would use for each expression. I sourced these sounds from the [Freesound](https://freesound.org/) website.
+
+- [neutral expression](https://freesound.org/people/bvaudio/sounds/395198/)
+
+- [sleeping expression](https://freesound.org/people/GregorQuendel/sounds/710389/)
+
+- [happy expression](https://freesound.org/people/ondondvo/sounds/460079/)
+
+# Attempts
+
+## Attempt 1
+
+<iframe id="A1: Sketch 1 (Attempt 1)" src="https://editor.p5js.org/WaiKei1/full/6W820i-0B"></iframe>
+
+<script type="module">
+
+    const iframe  = document.getElementById (`A1: Sketch 1 (Attempt 1)`)
+    iframe.width  = iframe.parentNode.scrollWidth
+    iframe.height = iframe.width * 9 / 16 + 42
+
+</script>
+
+This is my first attempt at Assignment 1. I imported the bear expressions that I drew in Procreate, along with the sounds I sourced, and implemented a clicking interaction. Below is a description of how my plushie bear connects to the three domains:
+
+- **How my plushie bear relates to the visual elements**
+
+She meant to be cute and comforting. The cuteness of its visual heals me. Therefore my visual will focus on crating a simple, warm, friendly and approachable aesthetic that reflects the meaningful characteristic that she had in my life.
+
+The visual approach that I have to express the cuteness and friendly are using the pastal colour, round, fluffy features. Through these features, she might recognize the bear face is her and she might realize the expression and the reaction are what she make me feel in real life.
+
+- **How my plushie bear relates to the sonic elements**
+
+Even though my plushie bear can't really make sounds, but I image that if she could express herself, she would do in a gentle way. These sound effects would reflect how she will react to when she had that specific emotions.
+
+- **How my plushie bear relates to the interactive elements**
+
+The interactivity also bring her to life. She would respond to my touch with different emotion just like how my mood changes when I hug her.
+
+## Attempt 2
+
+<iframe id="A1: Attempt 2" src="https://editor.p5js.org/WaiKei1/full/ogBSf5AGr"></iframe>
+
+<script type="module">
+
+    const iframe  = document.getElementById (`A1: Attempt 2`)
+    iframe.width  = iframe.parentNode.scrollWidth
+    iframe.height = iframe.width * 9 / 16 + 42
+
+</script>
+
+This is the second attempt at my Assignment 1. Compared to the first attempt, this version is more refined and closer to the final outcome. I focused on adding one more expression (happy) and worked on implementing a looping background. Below is a description of how my work achieves cuteness in the three domains:
+
+**Visual**
+
+My sketch brings my plushie bear to life through three emotional states: neutral, sleeping, and happy. each represented with a soft pastel color palette to enhance the cute aesthetic. To make each state more expressive, I’ve designed additional elements: floating “ZZZ” symbols for the sleeping state and flowers for the happy state, adding a playful and cozy atmosphere.
+
+**Sonic**
+
+Since my plushie can’t actually speak, I’ve imagined gentle, baby sounds to express each emotion. The audio is designed to feel like a cute, playful reaction, as if she’s responding with tiny coos and hums.
+
+**Interactivity**
+
+Interaction is simple clicking cycles through her expressions, mimicking how her mood changes when I play with her in real life.
+
+## Feedback from classmate
+
+**Feedback from Rania:**
+
+"In my opinion, your sketch has successfully captured the cute aesthetic. The adorable soft pastel colour scheme, the roundness of the teddy bear, the cheerful laughter audio, and the peacefully sleeping bear all contribute to this feeling. I have no further suggestions; you have truly achieved the cute aesthetic!"
+
+# Final Assignment 1
+
+I reviewed my code while ensuring it meets all the criteria. I realized that in my second attempt, I did not fully implement the classes concept. To address this, I refined my code further and structured it more efficiently.
+
+<iframe id="A1" src="https://editor.p5js.org/WaiKei1/full/_lnmvflzo"></iframe>
+
+<script type="module">
+
+    const iframe  = document.getElementById (`A1`)
+    iframe.width  = iframe.parentNode.scrollWidth
+    iframe.height = iframe.width * 9 / 16 + 42
+
+</script>
+
+Here's how my assignment 1 uses these concept:
+
+**Variables**
+
+1.  I use this concept when I track the bear's expression:
+
+        let currentExpression = 0;
+
+    This variable helps cycle through the bear’s emotional states when the user clicks.
+
+2.  Storing background colours:
+
+        let bgColors = ["#fbe8e8", "#9cd7f0", "#f8f9a7"];
+
+    Three background colours for three expressions.
+
+3.  modifying animation properties:
+
+        this.speed = random(1, 3);
+
+**Functions**
+
+1. preload(): loads images and sounds
+2. mouseClicked(): clicking interaction, cycling through expressions
+3. createBgObjects(image): generate floating background elements depending on the current expression
+4. createBloomingFlowers() – generate flowers when the current expression is happy
+
+**Iteration**
+
+1.  creating floating objects: (for loop)
+
+        for (let i = 0; i < 20; i++) {
+            bgObjects.push(new FloatingObject(image));
+        }
+
+2.  looping flowers in the happy state: (for of)
+
+        for (let flower of bloomingFlowers) {
+            flower.grow();
+            flower.display();
+        }
+
+**Boolean Logic**
+
+1.  switching expressions after clicking:
+
+        currentExpression = (currentExpression + 1) % expressions.length;
+
+2.  different conditions (if)
+
+        if (currentExpression === 0 || currentExpression === 1) {
+            for (let obj of bgObjects) {
+                obj.move();
+                obj.display();
+            }
+        }
+
+**Arrays**
+
+1.  Stores images for different expressions
+
+        let expressions = []; // Stores bear's facial expressions
+        expressions[0] = loadImage("/expressions/neutral.png");
+        expressions[1] = loadImage("/expressions/sleeping.png");
+        expressions[2] = loadImage("/expressions/happy.png");
+
+2.  Stores multiple sounds for different expressions
+
+        let sounds = []; // Stores sound effects
+        sounds[0] = loadSound("/sounds/neutral.mp3");
+        sounds[1] = loadSound("/sounds/sleeping.mp3");
+        sounds[2] = loadSound("/sounds/happy.mp3");
+
+**Classes**
+
+1.  Floating Object (sleeping and neutral expression)
+
+        class FloatingObject {
+        constructor(img) {
+            this.x = random(width);
+            this.y = random(height);
+            this.speed = random(1, 3);
+            this.size = random(450, 600);
+            this.img = img;
+        }
+
+        move() {
+            this.y += this.speed;
+            if (this.y - this.size / 2 > height) {
+            this.y = -this.size / 2;
+            this.x = random(width);
+            }
+        }
+
+        display() {
+            image(this.img, this.x, this.y, this.size, this.size);
+        }
+        }
+
+2.  Blooming flowers for the happy expression
+
+        class BloomingFlower {
+        constructor(img) {
+            this.x = random(width);
+            this.y = random(height);
+            this.size = random(500, 650);
+            this.bloom = random(0.5, 1.5);
+            this.img = img;
+        }
+
+        grow() {
+            this.size += this.bloom;
+            if (this.size > 1000) {
+            this.size = random(500, 650);
+            this.x = random(width);
+            this.y = random(height);
+            this.bloom = random(1.5, 3);
+            }
+        }
+
+        display() {
+            image(this.img, this.x, this.y, this.size, this.size);
+        }
+        }
+
+---
+
+# Reflection
+
+**How well did you achieve cuteness in the visual, sonic, and interactive domains?**
+
+Overall, I believe I achieved cuteness quite well, especially in the visual and sonic aspects. The fluffy, rounded features and pastel color palette contribute to an overall soft and adorable aesthetic. For the sonic elements, I used baby-like sounds to mimic bear noises, making the character feel more childlike and endearing.
+
+In terms of interactivity, clicking allows users to cycle through different expressions, which adds engagement. Initially, I wanted to implement a dragging interaction for the sleeping expression, but due to time constraints, I couldn't manage to integrate it.
+
+**What communities and learning resources did you draw on to do the bulk of your learning for this project?**
+
+For this project, I relied on several online resources, including MDN Web Docs, W3Schools, Stack Overflow, JavaScript.info, and p5.js references to deepen my understanding of key concepts. Additionally, I consulted ChatGPT and DeepSeek whenever I had extra questions or encountered challenges that I couldn't resolve on my own.
+
+**What aspects have you enjoyed the most about this process? What have you found to be most surprising?**
+
+I find coding similar to solving math problems. The most enjoyable part is the sense of achievement when I finally figure something out. Debugging and refining the logic can be frustrating, but that “aha” moment makes it all worthwhile.
+
+The most surprising aspect was realizing how much code efficiency matters. Initially, my code was quite lengthy, but applying classes and boolean logic made it more concise and effective. A great example is my Attempt 2 for A2, where restructuring the code significantly improved its readability and efficiency.
+
+**What aspects have you struggled with the most? What have you found the most confusing?**
+
+One of my biggest challenges was implementing the looping background effect. It took me quite a while to get it working correctly, but through trial and error, I eventually figured it out. Debugging the logic and ensuring smooth transitions in animations was tricky, but solving it was very rewarding.
+
+---
+
+## Quick Links
+
+### Weekly Study Journey:
+
+- [Week 1](https://waikei1-creative-co-63.deno.dev/week1)
+- [Week 3](https://waikei1-creative-co-63.deno.dev/week3)
+- [Week 4](https://waikei1-creative-co-63.deno.dev/week4)
+
+---
