--- a/posts/A1.md
+++ b/posts/A1.md
@@ -6,6 +6,21 @@ disable_html_sanitization: true
 allow_math: true
 ---
 
+**INDEX**
+
+- [Ideation Stage](https://waikei1-creative-co-63.deno.dev/A1#ideation-stage)
+- [Sketch](https://waikei1-creative-co-63.deno.dev/A1#sketch)
+  - [Bear's Expression](https://waikei1-creative-co-63.deno.dev/A1#bears-expressions)
+  - [Sonic](https://waikei1-creative-co-63.deno.dev/A1#sonic)
+- [Attempts](https://waikei1-creative-co-63.deno.dev/A1#attempts)
+  - [Attempt 1](https://waikei1-creative-co-63.deno.dev/A1#attempt-1)
+  - [Attempt 2](https://waikei1-creative-co-63.deno.dev/A1#attempt-2)
+- [Feedback from classmate](https://waikei1-creative-co-63.deno.dev/A1#feedback-from-classmate)
+- [Final Assignment 1](https://waikei1-creative-co-63.deno.dev/A1#final-assignment-1)
+- [Reflection](https://waikei1-creative-co-63.deno.dev/A1#reflection)
+
+---
+
 # Ideation Stage
 
 ### My Kindred Spirit: Plushie Bear
@@ -54,6 +69,8 @@ Here is how I will achieve cuteness in three domains:
   - mousePressed or mouseClicked to apply the clickling interaction
   - Canvas background colour change when along with the expression after clicking
 
+---
+
 # Sketch
 
 <iframe id="A1: Ideation Sketch" src="https://editor.p5js.org/WaiKei1/full/ELzwIInyR"></iframe>
@@ -76,7 +93,17 @@ The canvas will be sized to fit the screen, with a round bear face displayed in 
 
 Each click will cycle through these expressions in order, creating an interactive experience.
 
-# Sonic
+---
+
+## Bear's Expressions
+
+![bear](/A1/bear.jpeg)
+
+These are the bear's expressions that I drew in Procreate.
+
+---
+
+## Sonic
 
 Before starting my first attempt at Assignment 1, I first gathered the sounds I would use for each expression. I sourced these sounds from the [Freesound](https://freesound.org/) website.
 
@@ -85,6 +112,8 @@ Before starting my first attempt at Assignment 1, I first gathered the sounds I 
 - [sleeping expression](https://freesound.org/people/GregorQuendel/sounds/710389/)
 
 - [happy expression](https://freesound.org/people/ondondvo/sounds/460079/)
+
+---
 
 # Attempts
 
@@ -116,6 +145,8 @@ Even though my plushie bear can't really make sounds, but I image that if she co
 
 The interactivity also bring her to life. She would respond to my touch with different emotion just like how my mood changes when I hug her.
 
+---
+
 ## Attempt 2
 
 <iframe id="A1: Attempt 2" src="https://editor.p5js.org/WaiKei1/full/ogBSf5AGr"></iframe>
@@ -142,11 +173,15 @@ Since my plushie can’t actually speak, I’ve imagined gentle, baby sounds to 
 
 Interaction is simple clicking cycles through her expressions, mimicking how her mood changes when I play with her in real life.
 
+---
+
 ## Feedback from classmate
 
 **Feedback from Rania:**
 
 "In my opinion, your sketch has successfully captured the cute aesthetic. The adorable soft pastel colour scheme, the roundness of the teddy bear, the cheerful laughter audio, and the peacefully sleeping bear all contribute to this feeling. I have no further suggestions; you have truly achieved the cute aesthetic!"
+
+---
 
 # Final Assignment 1
 
@@ -182,12 +217,16 @@ Here's how my assignment 1 uses these concept:
 
         this.speed = random(1, 3);
 
+---
+
 **Functions**
 
 1. preload(): loads images and sounds
 2. mouseClicked(): clicking interaction, cycling through expressions
 3. createBgObjects(image): generate floating background elements depending on the current expression
 4. createBloomingFlowers() – generate flowers when the current expression is happy
+
+---
 
 **Iteration**
 
@@ -204,6 +243,8 @@ Here's how my assignment 1 uses these concept:
             flower.display();
         }
 
+---
+
 **Boolean Logic**
 
 1.  switching expressions after clicking:
@@ -218,6 +259,8 @@ Here's how my assignment 1 uses these concept:
                 obj.display();
             }
         }
+
+---
 
 **Arrays**
 
@@ -234,6 +277,8 @@ Here's how my assignment 1 uses these concept:
         sounds[0] = loadSound("/sounds/neutral.mp3");
         sounds[1] = loadSound("/sounds/sleeping.mp3");
         sounds[2] = loadSound("/sounds/happy.mp3");
+
+---
 
 **Classes**
 
@@ -315,10 +360,26 @@ One of my biggest challenges was implementing the looping background effect. It 
 
 ## Quick Links
 
+### Assignments:
+
+- [Assignment 1: Cute!](https://waikei1-creative-co-63.deno.dev/A1)
+- [Assignment 2: Chaos!](https://waikei1-creative-co-63.deno.dev/A2)
+- [Assignment 3: Interesting!](https://waikei1-creative-co-63.deno.dev/A3)
+
+---
+
 ### Weekly Study Journey:
 
-- [Week 1](https://waikei1-creative-co-63.deno.dev/week1)
+- [Week 2](https://waikei1-creative-co-63.deno.dev/week2)
 - [Week 3](https://waikei1-creative-co-63.deno.dev/week3)
 - [Week 4](https://waikei1-creative-co-63.deno.dev/week4)
+- [Week 5](https://waikei1-creative-co-63.deno.dev/week5)
+- [Week 6](https://waikei1-creative-co-63.deno.dev/week6)
+- [Week 7](https://waikei1-creative-co-63.deno.dev/week7)
+- [Week 8](https://waikei1-creative-co-63.deno.dev/week8)
+- [Week 9](https://waikei1-creative-co-63.deno.dev/week9)
+- [Week 10](https://waikei1-creative-co-63.deno.dev/week10)
+- [Week 11](https://waikei1-creative-co-63.deno.dev/week11)
+- [Week 12](https://waikei1-creative-co-63.deno.dev/week12)
 
 ---
