--- a/posts/A2.md
+++ b/posts/A2.md
@@ -8,16 +8,30 @@ allow_math: true
 
 **INDEX**
 
-- [Ideation Stage](https://waikei1-creative-co-63.deno.dev/A1#ideation-stage)
-- [Sketch](https://waikei1-creative-co-63.deno.dev/A1#sketch)
-  - [Bear's Expression](https://waikei1-creative-co-63.deno.dev/A1#bears-expressions)
-  - [Sonic](https://waikei1-creative-co-63.deno.dev/A1#sonic)
-- [Attempts](https://waikei1-creative-co-63.deno.dev/A1#attempts)
-  - [Attempt 1](https://waikei1-creative-co-63.deno.dev/A1#attempt-1)
-  - [Attempt 2](https://waikei1-creative-co-63.deno.dev/A1#attempt-2)
-- [Feedback from classmate](https://waikei1-creative-co-63.deno.dev/A1#feedback-from-classmate)
-- [Final Assignment 1](https://waikei1-creative-co-63.deno.dev/A1#final-assignment-1)
-- [Reflection](https://waikei1-creative-co-63.deno.dev/A1#reflection)
+- [Chosen Text and Passages](https://waikei1-creative-co-63.deno.dev/a2#chosen-text-and-passages)
+
+  - [Chosen Text](https://waikei1-creative-co-63.deno.dev/a2#chosen-text)
+  - [Three passages that speak loudest](https://waikei1-creative-co-63.deno.dev/a2#three-passages-that-speak-loudest)
+
+- [Inspiration Stage](https://waikei1-creative-co-63.deno.dev/a2#inspiration-stage)
+
+  - [Mycelium](https://waikei1-creative-co-63.deno.dev/a2#mycelium)
+  - [Life Cycle of a Mushroom](https://waikei1-creative-co-63.deno.dev/a2#life-cycle-of-a-mushroom)
+  - [Code Inspiration](https://waikei1-creative-co-63.deno.dev/a2#code-inspiration)
+
+- [Ideation Stage](https://waikei1-creative-co-63.deno.dev/a2#ideation-stage)
+
+  - [Summary of my idea](https://waikei1-creative-co-63.deno.dev/a2#summary-of-my-idea)
+  - [Visual Design](https://waikei1-creative-co-63.deno.dev/a2#visual-design)
+  - [Sound Design](https://waikei1-creative-co-63.deno.dev/a2#sound-design)
+
+- [Techniques that I'll use in A2](https://waikei1-creative-co-63.deno.dev/a2#techniques-that-ill-use-in-a2)
+
+- [Feedback](https://waikei1-creative-co-63.deno.dev/a2#feedback)
+
+- [First Attempt](https://waikei1-creative-co-63.deno.dev/a2#first-attempt)
+
+- [Final A2](https://waikei1-creative-co-63.deno.dev/a2#final-assignment-2)
 
 ---
 
@@ -99,6 +113,24 @@ This cyclical process inspired the conceptual structure of my work, which I dist
 
 ---
 
+### Code Inspiration
+
+I found inspiration in an [interactive video showcasing shape transformations](https://www.youtube.com/embed/REPypjSeoRs?si=GuCoyfQsQjKApcv3) driven by mouse interaction. The organic, flowing movement of the shapes closely resembles how I envision the spores spreading.
+
+<iframe id="Interactive Art" src="https://www.youtube.com/embed/REPypjSeoRs?si=GuCoyfQsQjKApcv3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<script type="module">
+
+    console.log (`hello world! 🚀`)
+
+    const iframe  = document.getElementById (`Interactive Art`)
+    iframe.width  = iframe.parentNode.scrollWidth
+    iframe.height = iframe.width * 9 / 16
+
+</script>
+
+---
+
 # Ideation Stage
 
 ### Summary of my idea
@@ -117,9 +149,13 @@ The interactive visual will consist of four looping stages:
 **Scatter → Fracture → Reform → Scatter**,
 emphasizing the constant, cyclical motion of spores as they move, interact, and reorganize. Each stage will be triggered through a click or press interaction, allowing users to transition between phases.
 
+---
+
 **Canvas Background:**
 
 The canvas will have a green background, chosen to evoke the tone of nature and life. It sets the scene for the fungal lifecycle and symbolizes the forest floor—where most fungal activity occurs.
+
+---
 
 **1. Stage 1: Scatter (Spore Dispersal)**
 
@@ -198,18 +234,6 @@ I really like how you’re using chaotic aesthetics to express the complexity of
 # First Attempt
 
 [First Attempt](https://waikei1-dms3-a2-32-1tygvw660swz.deno.dev/)
-
-<iframe id="First Attempt" src="https://waikei1-dms3-a2-32-1tygvw660swz.deno.dev/" title="First Attempt" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-<script type="module">
-
-    console.log (`hello world! 🚀`)
-
-    const iframe  = document.getElementById (`First Attempt`)
-    iframe.width  = iframe.parentNode.scrollWidth
-    iframe.height = iframe.width * 9 / 16
-
-</script>
 
 This is the first attempt I did to test if the outcome is what I expected, BUT I realised that it will be so funny if the spores is stuck within the edge of the canvas and the sound will be delayed if it straight away jumped to stage 1. Additionally, it's a bit lagging when change to fracture mode so I might reduce the amount of the spores.
 
