--- a/posts/A2.md
+++ b/posts/A2.md
@@ -129,6 +129,16 @@ I found inspiration in an [interactive video showcasing shape transformations](h
 
 </script>
 
+<iframe id="interaction" src="https://editor.p5js.org/Taq_1836/full/g1SdV9yBd"></iframe>
+
+<script type="module">
+
+    const iframe  = document.getElementById (`interaction`)
+    iframe.width  = iframe.parentNode.scrollWidth
+    iframe.height = iframe.width * 9 / 16 + 42
+
+</script>
+
 ---
 
 # Ideation Stage
@@ -181,17 +191,23 @@ Once connected, the network will flash briefly, and the spores will gradually me
 
 ### Sound Design
 
-I will create three looping sound environments, each designed to evoke a different quality of movement and transformation in the fungal system.
+I will create three looping sound environments, each designed to evoke a different quality of movement and transformation in the fungal system. The original sounds are from [Freesound](https://freesound.org/). I downloaded them and edit to make it fits.
 
 **1. Stage 1: Scatter – Calm Chaos**
+
+_[original sound](https://freesound.org/people/gis_sweden/sounds/786156/)_
 
 This stage shows spores drifting randomly. The sound will be soft and ambient, like natural chaos—similar to **MyNoise Jungle or Fire**, with scattered textures and no strong structure. It represents calm unpredictability and sits between noise and sound, encouraging listeners to rethink how we hear “movement.”
 
 **2. Stage 2: Fracture – Unstable Connections**
 
+_[original sound](https://freesound.org/people/CVLTIV8R/sounds/796980/)_
+
 As the spores start glitching and bouncing to connect, the sound becomes sharper and tighter. I’ll use high-pitched glitches. It’s unstable and chaotic, showing the tension in making connections.
 
 **3. Stage 3: Reform – Nervous Convergence**
+
+_[original sound](https://freesound.org/people/FS_D/sounds/582995/)_
 
 Spores begin to come together and reposition. The sound here is nervous and fast, with twitchy rhythms and slight structure—but still unstable. It suggests a fragile order that never fully settles, showing how systems try to come together but remain in constant motion.
 
