--- a/posts/A3.md
+++ b/posts/A3.md
@@ -56,6 +56,40 @@ Feedback plays a central role in this community — it's how designers grow. How
 
 ---
 
+**Domain**
+
+The domain of the UI/UX design community is focused on user interface and experience design — creating digital products that are intuitive, accessible, and enjoyable. Members share a passion for improving design skills, understanding user behavior, and exploring creative solutions to design challenges.
+
+This shared domain gives members a sense of belonging and motivation to participate in discussions and activities.
+
+---
+
+**Repertoire**
+
+The repertoire consists of the shared resources, tools, language, stories, and routines that members use. The UI/UX community has a rich repertoire including:
+
+- Common terminology (wireframes, prototypes, usability testing)
+
+- Tools and platforms (Figma, Adobe XD, Sketch)
+
+- Routines such as portfolio reviews, design critiques, and feedback sessions
+
+- Shared narratives of career growth and design challenges
+
+---
+
+**Values**
+
+The values represent the shared principles, priorities, and attitudes held by the community. Core values in the UI/UX design community include:
+
+- **Collaboration and knowledge sharing** — members actively give and receive constructive feedback
+
+- **Continuous learning** — openness to new techniques and critiques for self-improvement
+
+- **User empathy** — prioritizing the needs and feelings of end users in design decisions
+
+---
+
 ### Inspiration from communities
 
 I looked at two specific community platforms for inspiration:
@@ -97,6 +131,8 @@ Building on the initial idea, I enhanced the interactivity by adding a feedback 
 This idea originated within the design community itself, where feedback is a core ritual for growth. As a UI/UX student and active participant in communities like UX Beginner and The Design Kids, I observed that while feedback is invaluable, it can often feel intimidating or overly formal. So I created UIUX Feedback Frenzy — a playful, interactive platform that lets users upload a design and receive feedback in the tone of their choice: Roast Me, Make it Cute, or Be Helpful.
 
 Rather than framing critique as a formal or stressful task, I wanted to make it emotionally expressive, fun, and personally customizable.
+
+---
 
 **Why it’s interesting:** (From Ngai’s perspective)
 
@@ -143,6 +179,12 @@ For my final project, I created UIUX Feedback Frenzy, an interactive website tha
 ---
 
 ### Links
+
+- [Final A3](https://waikei1.github.io/UI-UX-Feedback-Frenzy/)
+
+- [A3 Github Link]()
+
+- [A3 Video]()
 
 ---
 
