--- a/posts/A3.md
+++ b/posts/A3.md
@@ -46,6 +46,8 @@ Lauren Lee McCarthy is known for creating performative and interactive systems t
 
 Her use of play, vulnerability, and interpersonal feedback loops made me think about how digital tools can create more human-centred experiences — not just functional interfaces.
 
+My project was inspired in part by Lauren Lee McCarthy’s work — especially how she uses code to reveal emotional layers of interaction. Just like her projects ask questions about care, automation, and intimacy, my feedback website explores how digital tools can change the tone of critique — making it more playful, supportive, or even brutally honest depending on the user’s mood.
+
 ---
 
 ### My Community of Practice: UI/UX Designers
@@ -176,15 +178,27 @@ For my final project, I created UIUX Feedback Frenzy, an interactive website tha
 
 ### Video
 
+<iframe id="UIUX Feedback Frenzy" src="https://www.youtube.com/embed/a2LIKXod5vU?si=8RRgSZl4EXQj-IxF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<script type="module">
+
+    console.log (`hello world! 🚀`)
+
+    const iframe  = document.getElementById (`UIUX Feedback Frenzy`)
+    iframe.width  = iframe.parentNode.scrollWidth
+    iframe.height = iframe.width * 9 / 16
+
+</script>
+
 ---
 
 ### Links
 
 - [Final A3](https://waikei1.github.io/UI-UX-Feedback-Frenzy/)
 
-- [A3 Github Link]()
+- [A3 Github Link](https://github.com/WaiKei1/UI-UX-Feedback-Frenzy)
 
-- [A3 Video]()
+- [A3 Video](https://youtu.be/a2LIKXod5vU)
 
 ---
 
